# geometry

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cbuild.sh  readme.md
arc/: readme.md
arc/midpoint_angle/: midpoint_angle.cpp
arc/min_arc/: min_arc.cpp
assets/polyline_simplification/: draw_polyline.py
cmake/: alpha_shape.cmake  arc.cmake  circle_hull.cmake  convex_hull.cmake  line.cmake  polyline_simplification.cmake
delaunay/: CMakeLists.txt
delaunay/src/: convexhull.cpp  widget.cpp  widget.ui
include/: alpha_shape.h  convexhull.h  kdtree.h  reference.h  sort.h  ui_widget.h  widget.h
include/arc/: midpoint_angle.h  min_arc.h
include/circle_hull/: circle_hull.h
include/common/: cloud_definition.h  cloud_definition.hpp  point_definition.h
include/convex_hull/: convex_hull2d.h  monotone_chain.h
include/line/: perpendicular_bisector.h
include/polyline_simplification/: polyline_simplification.h
midpoint_angle/: midpoint_angle.cpp
min_arc/: min_arc.cpp
modules/arc/: CMakeLists.txt
modules/arc/common/: arc_utils.h
modules/arc/midpoint_angle/: midpoint_angle.cpp  midpoint_angle.h
modules/arc/min_arc/: min_arc.cpp
modules/arc/test/: midpoint_angle_test.cpp  min_arc_test.cpp
modules/common/: cloud_definition.hpp  point_definition.h
modules/hull/: CMakeLists.txt
modules/hull/circle_hull/: circle_hull.cpp
modules/hull/convex_hull/: convex_hull2d.cpp  gift_wrapping.h  monotone_chain.cpp
modules/hull/test/: alpha_shape_test.cpp  circle_hull_test.cpp  convex_hull2d_test.cpp
modules/line/: CMakeLists.txt
modules/line/perpendicular_bisector/: perpendicular_bisector.cpp
modules/line/polyline_simplification/: polyline_simplification.cpp
modules/line/test/: perpendicular_bisector_test.cpp  polyline_simplification_test.cpp
polyline_simplification/: draw_polyline.py  generate_polyline.py  polyline_simplification.cpp  readme.md
src/: convexhull.cpp  kdtree.cpp  widget.cpp
src/arc/: midpoint_angle.cpp  min_arc.cpp
src/circle_hull/: circle_hull.cpp
src/convex_hull/: convex_hull2d.cpp  convex_hull2d.hpp  gift_wrapping.cpp
src/line/: perpendicular_bisector.cpp
src/polyline_simplification/: polyline_simplification.cpp
test/: alpha_shape_node.cpp
test/arc/: arc.py  midpoint_angle_node.cpp  min_arc_node.cpp  min_arc_test.cpp
test/circle_hull/: circle_hull_test.cpp
test/convex_hull/: convex_hull2d_node.cpp  convex_hull2d_test.cpp
test/line/: perpendicular_bisector_node.cpp
test/polyline_simplification/: polyline_simplification_node.cpp
